// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-args expected args should get args with minimal parameters 1`] = `
{
  "anchor": "counter",
  "anchorBuild": false,
  "anchorName": "anchor",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-next@0.0.1",
  "packageManager": "npm",
  "preset": "next",
  "ui": "tailwind",
}
`;

exports[`get-args expected args should get args with minimal parameters and package manager npm 1`] = `
{
  "anchor": "counter",
  "anchorBuild": false,
  "anchorName": "anchor",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-next@0.0.1",
  "packageManager": "npm",
  "preset": "next",
  "ui": "tailwind",
}
`;

exports[`get-args expected args should get args with minimal parameters and package manager pnpm 1`] = `
{
  "anchor": "counter",
  "anchorBuild": false,
  "anchorName": "anchor",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-next@0.0.1",
  "packageManager": "pnpm",
  "preset": "next",
  "ui": "tailwind",
}
`;

exports[`get-args expected args should get args with minimal parameters and package manager yarn 1`] = `
{
  "anchor": "counter",
  "anchorBuild": false,
  "anchorName": "anchor",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-next@0.0.1",
  "packageManager": "yarn",
  "preset": "next",
  "ui": "tailwind",
}
`;

exports[`get-args expected args should get args with preset: --preset next --ui tailwind --anchor counter 1`] = `
{
  "anchor": "counter",
  "anchorBuild": false,
  "anchorName": "anchor",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-next@0.0.1",
  "packageManager": "npm",
  "preset": "next",
  "ui": "tailwind",
}
`;

exports[`get-args expected args should get args with preset: --preset react --anchor counter --anchor-name program --ui tailwind 1`] = `
{
  "anchor": "counter",
  "anchorBuild": false,
  "anchorName": "program",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-react@0.0.1",
  "packageManager": "npm",
  "preset": "react",
  "ui": "tailwind",
}
`;

exports[`get-args expected args should get args with preset: --preset react --anchor none --ui none 1`] = `
{
  "anchor": "none",
  "anchorBuild": false,
  "anchorName": "anchor",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-react@0.0.1",
  "packageManager": "npm",
  "preset": "react",
  "ui": "none",
}
`;

exports[`get-args expected args should get args with preset: --preset react --ui tailwind --anchor counter 1`] = `
{
  "anchor": "counter",
  "anchorBuild": false,
  "anchorName": "anchor",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-react@0.0.1",
  "packageManager": "npm",
  "preset": "react",
  "ui": "tailwind",
}
`;

exports[`get-args expected args should get args with preset: --preset=react --anchor=counter --anchor-name=program --anchor-build --ui=tailwind 1`] = `
{
  "anchor": "counter",
  "anchorBuild": true,
  "anchorName": "program",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-react@0.0.1",
  "packageManager": "npm",
  "preset": "react",
  "ui": "tailwind",
}
`;

exports[`get-args expected args should get args with preset: --preset=react --anchor=counter --anchor-name=program --ui=tailwind 1`] = `
{
  "anchor": "counter",
  "anchorBuild": false,
  "anchorName": "program",
  "appName": "web",
  "dryRun": false,
  "name": "my-app",
  "package": "@solana-developers/preset-react@0.0.1",
  "packageManager": "npm",
  "preset": "react",
  "ui": "tailwind",
}
`;
